--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="https://isaque4nd.github.io/SuperTrunfo2.0/style.css">
     <title>
         Imersão Dev - Aula 08
     </title>
@@ -36,7 +36,7 @@
                     <div id="resultado"></div>
                 </form>
             </div>
-            <script src="script.js"></script>
+            <script src="https://isaque4nd.github.io/SuperTrunfo2.0/script.js"></script>
         </body>
         
         </html>
